RESOLVED FIXED95085
[Qt] Fix typo in CoordinatedGraphicsLayer::syncAnimatedProperties
https://bugs.webkit.org/show_bug.cgi?id=95085
Summary [Qt] Fix typo in CoordinatedGraphicsLayer::syncAnimatedProperties
Rafael Brandao
Reported 2012-08-27 07:23:39 PDT
[Qt] Fix typo in CoordinatedGraphicsLayer::syncAnimatedProperties
Attachments
Patch (1.64 KB, patch)
2012-08-27 07:25 PDT, Rafael Brandao
no flags
Rafael Brandao
Comment 1 2012-08-27 07:25:33 PDT
Noam Rosenthal
Comment 2 2012-08-27 07:26:53 PDT
Comment on attachment 160714 [details] Patch Wouldn't call it a typo, rather a "bug" :)
WebKit Review Bot
Comment 3 2012-08-27 10:04:24 PDT
Comment on attachment 160714 [details] Patch Clearing flags on attachment: 160714 Committed r126771: <http://trac.webkit.org/changeset/126771>
WebKit Review Bot
Comment 4 2012-08-27 10:04:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.