[Qt] Fix typo in CoordinatedGraphicsLayer::syncAnimatedProperties https://bugs.webkit.org/show_bug.cgi?id=95085

Reviewed by Noam Rosenthal.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp: The flag should be disabled
once we process the sync for animated properties. Previously, it was never disabling it once enabled.


Canonical link: https://commits.webkit.org/112952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126771 268f45cc-cd09-0410-ab3c-d52691b4dbfc